[package]
name = "jwt-cli"
description = "Parse and validate JWT files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2", features = ["derive"] }
jsonwebtoken = "8.1"
serde_json = "1.0"
thiserror = "1.0"
x509-parser = "0.14"
zeroize = { version = "1.5", features = ["derive"] }
